# Alcubierre

./: .gitignore  Alcubierre.mm  CMakeLists.txt  LICENSE.txt  README.md  compile_commands.json  plan.txt
assets/: Alcubierre.xp  Alcubierre_Title.bak.xp  Alcubierre_Title.xp  Alcubierre_Title1.xp  Alcubierre_Title10.xp  Alcubierre_Title11.xp  Alcubierre_Title2.xp  Alcubierre_Title3.xp  Alcubierre_Title4.xp  Alcubierre_Title5.xp  Alcubierre_Title6.xp  Alcubierre_Title7.xp  Alcubierre_Title8.xp  Alcubierre_Title9.xp  BaseMissionScreen.xp  EnemyBase.xp  Loading1.xp  Loading2.xp  Loading3.xp  Loading4.xp  Location_Completed.xp  Location_Current.xp  Location_Current2.xp  Location_Skipped.xp  Location_Unknown.xp  Overview.xp  PlayerShip.xp  Static1.xp  Static2.xp  Static3.xp  Static_Hack1.xp  Static_Hack2.xp  Static_Hack3.xp
cmake/modules/: Findcsfml-audio.cmake  Findncurses.cmake  Findpanelw.cmake  Findpdcurses.cmake  Findzlib.cmake
include/: AlcubierreGame.h  engine.h  events.h  threads.h  xpFunctions.h
include/game/: BaseMissionScreen.h  GameOverScreen.h  OverviewScreen.h  StationMissionScreen.h  StoreScreen.h  TitleScreen.h
include/objects/: EnemyBase.h  Room.h  Ship.h  sprites.h  ui.h
src/: AlcubierreGame.c  engine.c  main.c  panel.c  xpDraw.c  xpLoader.c
src/game/: BaseMissionScreen.c  GameOverScreen.c  OverviewScreen.c  StationMissionScreen.c  StoreScreen.c  TitleScreen.c
src/objects/: AXPSprite.c  EnemyBase.c  ProgressBar.c  Room.c  Ship.c  TextBox.c  UI_SelectionWindow.c  XPSprite.c
